Bug 214317 - getcap -r / should default to ignore /proc/ reading errors
Summary: getcap -r / should default to ignore /proc/ reading errors
Status: RESOLVED CODE_FIX
Alias: None
Product: Tools
Classification: Unclassified
Component: libcap (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Andrew G. Morgan
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-05 15:38 UTC by Andrew G. Morgan
Modified: 2021-09-06 03:27 UTC (History)
0 users

See Also:
Kernel Version: n/a
Subsystem:
Regression: No
Bisected commit-id:


Attachments

Description Andrew G. Morgan 2021-09-05 15:38:26 UTC
This command

   getcap -r /

generates a gazillion warnings because of things like this:

   Failed to get capabilities of file '/proc/183650/task/183650/net/fib_triestat' (Operation not supported)

we should either silently ignore operation not permitted problems, or skip /proc/ altogether by default.

Note You need to log in before you can comment on or make changes to this bug.