Treat ENOTSUP as an expected error for getcap.

Things like /proc/* files don't support capabilities on them and
if getcap looks at them it generates a lot of errors. Treat it as
equivalent to there being no capability on the file.

This addresses

  https://bugzilla.kernel.org/show_bug.cgi?id=214317

Signed-off-by: Andrew G. Morgan <morgan@kernel.org>